--- a/app/src/main/res/layouts/rows/layout/drink_row.xml
+++ b/app/src/main/res/layouts/rows/layout/drink_row.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:background="@android:color/holo_blue_bright"
+    android:background="@android:color/holo_blue_light"
     style="@style/drink_title">
 
     <ImageView
