--- a/app/src/main/res/layouts/detailsFragments/layout/add_ingredient_fragment.xml
+++ b/app/src/main/res/layouts/detailsFragments/layout/add_ingredient_fragment.xml
@@ -10,7 +10,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/add_ingredients_fragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/text_heading"
@@ -58,7 +58,8 @@
             android:fontFamily="sans-serif-light"
             android:hint="@string/ingredient_hint"
             android:minHeight="@dimen/min_height"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:inputType="text"/>
     </LinearLayout>
 
         <LinearLayout
@@ -88,7 +89,8 @@
                 android:fontFamily="sans-serif-light"
                 android:hint="@string/measure_hint"
                 android:minHeight="@dimen/min_height"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:inputType="text"/>
         </LinearLayout>
 
     </LinearLayout>
@@ -129,7 +131,8 @@
                 android:fontFamily="sans-serif-light"
                 android:hint="@string/ingredient_hint"
                 android:minHeight="@dimen/min_height"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:inputType="text"/>
         </LinearLayout>
 
         <LinearLayout
@@ -159,7 +162,8 @@
                 android:fontFamily="sans-serif-light"
                 android:hint="@string/measure_hint"
                 android:minHeight="@dimen/min_height"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:inputType="text"/>
         </LinearLayout>
     </LinearLayout>
 
@@ -199,7 +203,9 @@
                 android:fontFamily="sans-serif-light"
                 android:hint="@string/ingredient_hint"
                 android:minHeight="@dimen/min_height"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:inputType="text"/>
+
         </LinearLayout>
 
         <LinearLayout
@@ -230,6 +236,7 @@
                 android:hint="@string/measure_hint"
                 android:minHeight="@dimen/min_height"
                 android:textSize="18sp" />
+            android:inputType="text"
         </LinearLayout>
     </LinearLayout>
 
@@ -269,7 +276,8 @@
                 android:fontFamily="sans-serif-light"
                 android:hint="@string/ingredient_hint"
                 android:minHeight="@dimen/min_height"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:inputType="text"/>
         </LinearLayout>
 
         <LinearLayout
@@ -299,7 +307,8 @@
                 android:fontFamily="sans-serif-light"
                 android:hint="@string/measure_hint"
                 android:minHeight="@dimen/min_height"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:inputType="text"/>
         </LinearLayout>
     </LinearLayout>
 
@@ -339,7 +348,8 @@
             android:fontFamily="sans-serif-light"
             android:hint="@string/ingredient_hint"
             android:minHeight="@dimen/min_height"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:inputType="text"/>
     </LinearLayout>
 
     <LinearLayout
@@ -369,7 +379,8 @@
             android:fontFamily="sans-serif-light"
             android:hint="@string/measure_hint"
             android:minHeight="@dimen/min_height"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:inputType="text"/>
     </LinearLayout>
 </LinearLayout>
 
@@ -409,7 +420,8 @@
                 android:fontFamily="sans-serif-light"
                 android:hint="@string/ingredient_hint"
                 android:minHeight="@dimen/min_height"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:inputType="text"/>
         </LinearLayout>
 
         <LinearLayout
@@ -439,7 +451,8 @@
                 android:fontFamily="sans-serif-light"
                 android:hint="@string/measure_hint"
                 android:minHeight="@dimen/min_height"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:inputType="text"/>
         </LinearLayout>
     </LinearLayout>
 
@@ -480,7 +493,8 @@
                 android:fontFamily="sans-serif-light"
                 android:hint="@string/ingredient_hint"
                 android:minHeight="@dimen/min_height"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:inputType="text"/>
         </LinearLayout>
 
         <LinearLayout
@@ -510,7 +524,8 @@
                 android:fontFamily="sans-serif-light"
                 android:hint="@string/measure_hint"
                 android:minHeight="@dimen/min_height"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:inputType="text"/>
         </LinearLayout>
     </LinearLayout>
 
