--- a/app/src/main/res/layouts/rows/layout/ingredient_measure_row.xml
+++ b/app/src/main/res/layouts/rows/layout/ingredient_measure_row.xml
@@ -29,7 +29,7 @@
             android:textStyle="bold"/>
 
         <TextView
-            android:id="@+id/measurementTV"
+            android:id="@+id/measureTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="18sp"/>
