--- a/app/src/main/res/layouts/navbar/layout/fragment_shopping.xml
+++ b/app/src/main/res/layouts/navbar/layout/fragment_shopping.xml
@@ -7,25 +7,10 @@
     tools:context=".ui.recipes.RecipesFragment"
     android:orientation="vertical">
 
-    <FrameLayout
-        android:id="@+id/frameLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:listitem="@layout/drink_row" />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|bottom"
-            android:layout_marginBottom="10dp"
-            android:contentDescription="@string/add_drink"
-            android:src="@drawable/ic_baseline_add_circle_24"
-            app:backgroundTint="@color/colorPrimary" />
-    </FrameLayout>
+            tools:listitem="@layout/drink_row"
+            android:layout_marginTop="10dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
